--- a/index3.html
+++ b/index3.html
@@ -865,7 +865,7 @@
       </div>
     </section>
 
-    <!--footer section============================================================================= -->
+   <!--footer section============================================================================= -->
 <section class="text-white p-5" style="background-color: #07294d;" id="footsection">
   <footer class="footer-top">
 
@@ -894,16 +894,16 @@
               <ul class="list-unstyled " id="list">
                 <li><a href="index.html" ><i class="bi bi-chevron-bar-right me-2 "></i><span class="hvr-forward"> Home</span></a></li>
                 <li><a href="pages/about.html"><i class="bi bi-chevron-bar-right  me-2"></i><span class="hvr-forward">About us</span></a></li>
-                <li><a href="courses.html"><i class="bi bi-chevron-bar-right  me-2"></i><span class="hvr-forward">Courses</span></a></li>
-                <li><a href="blog.html"><i class="bi bi-chevron-bar-right  me-2"></i><span class="hvr-forward">News</span></a></li>
-                <li><a href="events.html"><i class="bi bi-chevron-bar-right  me-2"></i><span class="hvr-forward">Events</span></a></li>
+                <li><a href="pages/courses.html"><i class="bi bi-chevron-bar-right  me-2"></i><span class="hvr-forward">Courses</span></a></li>
+                <li><a href="pages/blog.html"><i class="bi bi-chevron-bar-right  me-2"></i><span class="hvr-forward">News</span></a></li>
+                <li><a href="pages/events.html"><i class="bi bi-chevron-bar-right  me-2"></i><span class="hvr-forward">Events</span></a></li>
             </ul>
             <ul class="list-unstyled" id="list">
                 <li><a href="#"><i class="bi bi-chevron-bar-right  me-2"></i><span class="hvr-forward">Gallery</span></a></li>
-                <li><a href="shop.html"><i class="bi bi-chevron-bar-right  me-2"></i><span class="hvr-forward">Shop</span></a></li>
-                <li><a href="teachers.html"><i class="bi bi-chevron-bar-right  me-2"></i><span class="hvr-forward">Teachers</span></a></li>
+                <li><a href="pages/shop.html"><i class="bi bi-chevron-bar-right  me-2"></i><span class="hvr-forward">Shop</span></a></li>
+                <li><a href="pages/teachers.html"><i class="bi bi-chevron-bar-right  me-2"></i><span class="hvr-forward">Teachers</span></a></li>
                 <li><a href="#"><i class="bi bi-chevron-bar-right  me-2"></i><span class="hvr-forward">Support</span></a></li>
-                <li><a href="contact.html"><i class="bi bi-chevron-bar-right  me-2"></i><span class="hvr-forward">Contact</span></a></li>
+                <li><a href="pages/contact.html"><i class="bi bi-chevron-bar-right  me-2"></i><span class="hvr-forward">Contact</span></a></li>
             </ul>
 
             </div>
@@ -977,7 +977,6 @@
 </footer>
 
 </section>
-
 
    
 
