--- a/index4.html
+++ b/index4.html
@@ -812,16 +812,16 @@
               <ul class="list-unstyled " id="list">
                 <li><a href="index.html" ><i class="bi bi-chevron-bar-right me-2 "></i><span class="hvr-forward"> Home</span></a></li>
                 <li><a href="pages/about.html"><i class="bi bi-chevron-bar-right  me-2"></i><span class="hvr-forward">About us</span></a></li>
-                <li><a href="courses.html"><i class="bi bi-chevron-bar-right  me-2"></i><span class="hvr-forward">Courses</span></a></li>
-                <li><a href="blog.html"><i class="bi bi-chevron-bar-right  me-2"></i><span class="hvr-forward">News</span></a></li>
-                <li><a href="events.html"><i class="bi bi-chevron-bar-right  me-2"></i><span class="hvr-forward">Events</span></a></li>
+                <li><a href="pages/courses.html"><i class="bi bi-chevron-bar-right  me-2"></i><span class="hvr-forward">Courses</span></a></li>
+                <li><a href="pages/blog.html"><i class="bi bi-chevron-bar-right  me-2"></i><span class="hvr-forward">News</span></a></li>
+                <li><a href="pages/events.html"><i class="bi bi-chevron-bar-right  me-2"></i><span class="hvr-forward">Events</span></a></li>
             </ul>
             <ul class="list-unstyled" id="list">
                 <li><a href="#"><i class="bi bi-chevron-bar-right  me-2"></i><span class="hvr-forward">Gallery</span></a></li>
-                <li><a href="shop.html"><i class="bi bi-chevron-bar-right  me-2"></i><span class="hvr-forward">Shop</span></a></li>
-                <li><a href="teachers.html"><i class="bi bi-chevron-bar-right  me-2"></i><span class="hvr-forward">Teachers</span></a></li>
+                <li><a href="pages/shop.html"><i class="bi bi-chevron-bar-right  me-2"></i><span class="hvr-forward">Shop</span></a></li>
+                <li><a href="pages/teachers.html"><i class="bi bi-chevron-bar-right  me-2"></i><span class="hvr-forward">Teachers</span></a></li>
                 <li><a href="#"><i class="bi bi-chevron-bar-right  me-2"></i><span class="hvr-forward">Support</span></a></li>
-                <li><a href="contact.html"><i class="bi bi-chevron-bar-right  me-2"></i><span class="hvr-forward">Contact</span></a></li>
+                <li><a href="pages/contact.html"><i class="bi bi-chevron-bar-right  me-2"></i><span class="hvr-forward">Contact</span></a></li>
             </ul>
 
             </div>
