--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -292,8 +292,8 @@
               </div>
               <div class="d-flex justify-content-between">
                 <ul class="list-unstyled " id="list">
-                  <li><a href="index.html" ><i class="bi bi-chevron-bar-right me-2 "></i><span class="hvr-forward"> Home</span></a></li>
-                  <li><a href="pages/about.html"><i class="bi bi-chevron-bar-right  me-2"></i><span class="hvr-forward">About us</span></a></li>
+                  <li><a href="../index.html" ><i class="bi bi-chevron-bar-right me-2 "></i><span class="hvr-forward"> Home</span></a></li>
+                  <li><a href="about.html"><i class="bi bi-chevron-bar-right  me-2"></i><span class="hvr-forward">About us</span></a></li>
                   <li><a href="courses.html"><i class="bi bi-chevron-bar-right  me-2"></i><span class="hvr-forward">Courses</span></a></li>
                   <li><a href="blog.html"><i class="bi bi-chevron-bar-right  me-2"></i><span class="hvr-forward">News</span></a></li>
                   <li><a href="events.html"><i class="bi bi-chevron-bar-right  me-2"></i><span class="hvr-forward">Events</span></a></li>
